--- a/.builds/archlinux.yml
+++ b/.builds/archlinux.yml
@@ -1,16 +1,28 @@
 image: archlinux
 
+secrets:
+  - ea8ca0d9-1859-4db5-bb99-8f12baf60b59
+
 packages:
   - tree-sitter-cli
 
 sources:
-  - https://git.sr.ht/~klahr/quadrate.nvim
+  - git+ssh://git@git.sr.ht/~klahr/quadrate.nvim
+
+environment:
+  GIT_SSH_COMMAND: "ssh -o StrictHostKeyChecking=no"
 
 tasks:
   - test_grammar: |
       cd quadrate.nvim/tree-sitter-quadrate
       tree-sitter generate
       tree-sitter test
+  - mirror-to-github: |
+      cd ~/quadrate.nvim
+      ssh-keyscan github.com >> ~/.ssh/known_hosts
+      git remote add github git@github.com:quadrate-language/quadrate.nvim.git || \
+        git remote set-url github git@github.com:quadrate-language/quadrate.nvim.git
+      git push --mirror github
 
 triggers:
   - action: email
